--- a/src/gut_test/CMakeLists.txt
+++ b/src/gut_test/CMakeLists.txt
@@ -1,6 +1,6 @@
 file(GLOB SUB_SOURCES "*.cpp")
 
-set(UTILS_SOURCES
-    ${UTILS_SOURCES}
+set(GUT_TEST_SOURCES
+    ${GUT_TEST_SOURCES}
     ${SUB_SOURCES}
     PARENT_SCOPE)
