--- a/ext/CMakeLists.txt
+++ b/ext/CMakeLists.txt
@@ -9,8 +9,9 @@ add_library(
         imgui/imgui.cpp
         imgui/imgui_draw.cpp
         imgui/imgui_widgets.cpp
-        imgui/examples/imgui_impl_opengl3.cpp
-        imgui/examples/imgui_impl_sdl.cpp
+        imgui/imgui_tables.cpp
+        imgui/backends/imgui_impl_sdl.cpp
+        imgui/backends/imgui_impl_opengl3.cpp
 )
 
 target_link_libraries(
