--- a/ext/CMakeLists.txt
+++ b/ext/CMakeLists.txt
@@ -7,10 +7,11 @@ add_library(
         imgui
     SHARED
         imgui/imgui.cpp
+        imgui/imgui_demo.cpp
         imgui/imgui_draw.cpp
         imgui/imgui_widgets.cpp
         imgui/imgui_tables.cpp
-        imgui/backends/imgui_impl_sdl.cpp
+        imgui/backends/imgui_impl_sdl2.cpp
         imgui/backends/imgui_impl_opengl3.cpp
 )
 
