--- a/ext/CMakeLists.txt
+++ b/ext/CMakeLists.txt
@@ -13,6 +13,7 @@ add_library(
         imgui/imgui_tables.cpp
         imgui/backends/imgui_impl_sdl2.cpp
         imgui/backends/imgui_impl_opengl3.cpp
+        imgui/misc/cpp/imgui_stdlib.cpp
 )
 
 target_link_libraries(
